--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 @import "./global/header.css";
 @import "./global/footer.css";
+@import "./global/animacao.css";
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
